--- a/app.json
+++ b/app.json
@@ -1,39 +1,62 @@
 {
   "expo": {
     "name": "SmartNest",
-    "slug": "SmartNest",
+    "slug": "smartnest",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "smartnest",
-    "userInterfaceStyle": "automatic",
-    "newArchEnabled": true,
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#FCFCF9"
     },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.smartnest.app",
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "SmartNest uses Face ID to authenticate you",
+        "NSLocalNetworkUsageDescription": "SmartNest needs local network access"
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#208A95"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "package": "com.smartnest.app"
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/favicon.ico",
+      "name": "SmartNest",
+      "shortName": "SmartNest",
+      "description": "Smart Home Access Control",
+      "scope": "/",
+      "startUrl": "/",
+      "display": "standalone",
+      "orientation": "portrait-primary",
+      "themeColor": "#208A95",
+      "backgroundColor": "#FCFCF9"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "scheme": "smartnest",
     "experiments": {
       "typedRoutes": true
+    },
+    "plugins": [
+      [
+        "expo-local-authentication"
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "your-project-id"
+      }
     }
   }
 }
