--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/auth": "^23.7.0",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.30",
+    "expo-auth-session": "^7.0.10",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
@@ -24,9 +27,11 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
+    "firebase": "^12.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-async-storage": "^0.0.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
