--- a/app.json
+++ b/app.json
@@ -27,13 +27,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#208A95"
       },
       "package": "com.smartnest.app"
     },
     "web": {
-      "favicon": "./assets/favicon.ico",
+      "favicon": "./assets/icon.png",
       "name": "SmartNest",
       "shortName": "SmartNest",
       "description": "Smart Home Access Control",
