--- a/app.json
+++ b/app.json
@@ -4,10 +4,10 @@
     "slug": "smartnest",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#FCFCF9"
     },
@@ -27,13 +27,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
+        "foregroundImage": "./assets/images/icon.png",
         "backgroundColor": "#208A95"
       },
       "package": "com.smartnest.app"
     },
     "web": {
-      "favicon": "./assets/icon.png",
+      "favicon": "./assets/images/favicon.png",
       "name": "SmartNest",
       "shortName": "SmartNest",
       "description": "Smart Home Access Control",
